CRUD accessoire avec lister, ajouter, modifier et supprimer

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -69,6 +69,35 @@ instrumentSupprimer:
     path: /instrument/supprimer/{id}
     controller: App\Controller\InstrumentController::supprimerInstrument
 
+
+# -----------------------------------------------------------------------------------------
+# Accessoire
+# -----------------------------------------------------------------------------------------
+
+app_accessoire:
+    path: /accessoire
+    controller: App\Controller\AccessoireController::index
+
+app_accessoire_accueil:
+    path: /accessoire/accueil
+    controller: App\Controller\AccessoireController::accueil
+
+accessoireAjouter:
+    path: /accessoire/ajouter
+    controller: App\Controller\AccessoireController::ajouterAccessoire
+
+accessoireLister:
+    path: /accessoire/lister
+    controller: App\Controller\AccessoireController::listerAccessoire
+
+accessoireModifier:
+    path: /accessoire/modifier/{id}
+    controller: App\Controller\AccessoireController::modifierAccessoire
+
+accessoireSupprimer:
+    path: /accessoire/supprimer/{id}
+    controller: App\Controller\AccessoireController::supprimerAccessoire
+
 # -----------------------------------------------------------------------------------------
 # Cours
 # -----------------------------------------------------------------------------------------
