--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-migrations-bundle": "*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
-        "symfony/yaml": "6.4.*"
-    },
-    "require-dev": {
+        "symfony/security-bundle": "6.4.*",
+        "symfony/yaml": "6.4.*",
+        "symfonycasts/verify-email-bundle": "*"
     },
     "config": {
         "allow-plugins": {
@@ -63,5 +65,8 @@
             "allow-contrib": false,
             "require": "6.4.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "6.4.*"
     }
 }
