--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,11 +3,12 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
-
+    
 
 # -----------------------------------------------------------------------------------------
 # Professeur
 # -----------------------------------------------------------------------------------------
+
 
 app_professeur:
     path: /professeur
@@ -36,7 +37,11 @@ professeurModifier:
 professeurSupprimer:
     path: /professeur/supprimer/{id}
     controller: App\Controller\ProfesseurController::supprimerProfesseur
-=======
+
+# -----------------------------------------------------------------------------------------
+# Cours
+# -----------------------------------------------------------------------------------------    
+
 app_cours:
     path: /cours
     controller: App\Controller\CoursController::index
@@ -65,3 +70,34 @@ app_coursModifier:
     path: /cours/modifier/{id}
     controller: App\Controller\CoursController::modifierCours
 
+# -----------------------------------------------------------------------------------------
+# Eleve
+# -----------------------------------------------------------------------------------------
+
+app_eleve:
+    path: /eleve
+    controller: App\Controller\EleveController::index
+
+app_eleve_accueil:
+    path: /eleve/accueil
+    controller: App\Controller\EleveController::accueil
+
+eleveAjouter:
+    path: /eleve/ajouter
+    controller: App\Controller\EleveController::ajouterEleve
+
+eleveConsulter:
+    path: /eleve/consulter/{id}
+    controller: App\Controller\EleveController::consulterEleve
+
+eleveLister:
+    path: /eleve/lister
+    controller: App\Controller\EleveController::listerEleve
+
+eleveModifier:
+    path: /eleve/modifier/{id}
+    controller: App\Controller\EleveController::modifierEleve
+
+eleveSupprimer:
+    path: /eleve/supprimer/{id}
+    controller: App\Controller\EleveController::supprimerEleve
