--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -233,3 +233,11 @@ con_consulter:
 con_lister:
     path: /intervention/lister
     controller: App\Controller\InterventionController::listerIntervention
+
+con_Modifier:
+    path: /intervention/modifier/{id}
+    controller: App\Controller\InterventionController::modifierIntervention
+
+con_Supprimer:
+    path: /intervention/supprimer/{id}
+    controller: App\Controller\InterventionController::supprimerIntervention
