--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -234,6 +234,14 @@ con_lister:
     path: /intervention/lister
     controller: App\Controller\InterventionController::listerIntervention
 
+interventionModifier:
+    path: /intervention/modifier/{id}
+    controller: App\Controller\InterventionController::modifierIntervention
+
+interventionSupprimer:
+    path: /intervention/supprimer/{id}
+    controller: App\Controller\InterventionController::supprimerIntervention
+
 # -----------------------------------------------------------------------------------------
 # Inscription
 # -----------------------------------------------------------------------------------------
@@ -274,3 +282,34 @@ con_Supprimer:
     path: /intervention/supprimer/{id}
     controller: App\Controller\InterventionController::supprimerIntervention
 
+# -----------------------------------------------------------------------------------------
+# Professionnel
+# -----------------------------------------------------------------------------------------
+
+app_professionnel:
+    path: /professionnel
+    controller: App\Controller\ProfessionnelController::index
+
+app_accueilprofessionnel:
+    path: /professionnel/accueil
+    controller: App\Controller\ProfessionnelController::accueil
+
+pro_consulter:
+    path: /professionnel/consulter/{id}
+    controller: App\Controller\ProfessionnelController::consulterProfessionnel
+
+pro_lister:
+    path: /professionnel/lister
+    controller: App\Controller\ProfessionnelController::listerProfessionnel
+
+professionnelModifier:
+    path: /professionnel/modifier/{id}
+    controller: App\Controller\ProfessionnelController::modifierProfessionnel
+
+professionnelSupprimer:
+    path: /professionnel/supprimer/{id}
+    controller: App\Controller\ProfessionnelController::supprimerProfessionnel
+
+pro_ajouter:
+    path: /professionnel/ajouter
+    controller: App\Controller\ProfessionnelController::ajouter
