--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -274,3 +274,30 @@ con_Supprimer:
     path: /intervention/supprimer/{id}
     controller: App\Controller\InterventionController::supprimerIntervention
 
+app_professionnel:
+    path: /professionnel
+    controller: App\Controller\ProfessionnelController::index
+
+app_accueilprofessionnel:
+    path: /professionel/accueil
+    controller: App\Controller\ProfessionnelController::accueil
+
+pro_lister:
+    path: /professionnel/lister
+    controller: App\Controller\ProfessionnelController::listerProfessionnel
+
+pro_consulter:
+    path: /professionnel/consulter/{id}
+    controller: App\Controller\ProfessionnelController::consulterProfessionnel
+
+professionnelModifier:
+    path: /professionnel/modifier/{id}
+    controller: App\Controller\ProfessionnelController::modifierProfessionnel
+
+professionnelSupprimer:
+    path: /professionnel/supprimer/{id}
+    controller: App\Controller\ProfessionnelController::supprimerProfessionnel
+
+pro_ajouter:
+    path: /professionnel/ajouter
+    controller: App\Controller\ProfessionnelController::ajouter
