--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     images_directory: '%kernel.project_dir%/public/image'
+    responsable_directory: '%kernel.project_dir%/public/responsable'
 services:
     # default configuration for services in *this* file
     _defaults:
