--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,8 +35,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/gestionnaire, roles: ROLE_GESTIONNAIRE }
+         #- { path: ^/etudiant, roles: ROLE_ETUDIANT }
+         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 when@test:
     security:
