--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     images_directory: '%kernel.project_dir%/public/image'
     responsable_directory: '%kernel.project_dir%/public/responsable'
+    professeur_directory: '%kernel.project_dir%/public/professeur'
 services:
     # default configuration for services in *this* file
     _defaults:
