finalisation du projet et correction des dernières erreurs

--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ APP_SECRET=a1206f2044c66d0e739b9474d1d19c8c
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-# DATABASE_URL="mysql://ADM_LILIAN31:mpLilian31@172.20.177.77:3306/25LILIAN31?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/24lilian31?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://ADM_LILIAN31:mpLilian31@172.20.177.77:3306/25LILIAN31?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/24lilian31?serverVersion=8.0.32&charset=utf8mb4"
 
 
 
